feat: Add develomentp page on index page

--- a/pynerd.html
+++ b/pynerd.html
@@ -95,9 +95,14 @@
                 <a href="#conteudo" class="hover:text-green-400 transition-colors">Conteúdo</a>
                 <a href="#depoimentos" class="hover:text-green-400 transition-colors">Depoimentos</a>
             </div>
-            <a href="#inscricao" class="px-6 py-2 bg-gradient-to-r from-green-500 to-cyan-500 hover:from-green-600 hover:to-cyan-600 rounded-lg font-semibold transition-all transform hover:-translate-y-0.5">
-                Inscreva-se
-            </a>
+            <div class="flex items-center space-x-4">
+                <a href="development.html" class="px-4 py-2 bg-slate-800 border border-cyan-500/30 rounded-lg font-semibold hover:bg-slate-700 transition-all text-sm">
+                    Development
+                </a>
+                <a href="#inscricao" class="px-6 py-2 bg-gradient-to-r from-green-500 to-cyan-500 hover:from-green-600 hover:to-cyan-600 rounded-lg font-semibold transition-all transform hover:-translate-y-0.5">
+                    Inscreva-se
+                </a>
+            </div>
         </div>
     </nav>
 
