--- a/pynerd.html
+++ b/pynerd.html
@@ -80,6 +80,29 @@
             opacity: 1;
             transform: translateY(0);
         }
+
+        .whatsapp-float {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            z-index: 1000;
+            animation: bounce-soft 2s infinite;
+        }
+
+        @keyframes bounce-soft {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-5px); }
+        }
+
+        .section-transition {
+            transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .hover-glow:hover {
+            box-shadow: 0 0 30px rgba(74, 222, 128, 0.3);
+            transform: scale(1.02);
+        }
+
     </style>
 </head>
 <body class="bg-slate-900 text-white font-sans antialiased">
@@ -394,6 +417,13 @@
             </div>
         </div>
     </section>
+
+    <!-- Float Booton -->
+    <a href="https://wa.me/244928301450" target="_blank" class="whatsapp-float">
+        <div class="w-16 h-16 bg-green-500 hover:bg-green-600 rounded-full flex items-center justify-center shadow-lg hover:shadow-xl transition-all">
+            <i class="fab fa-whatsapp text-2xl text-white"></i>
+        </div>
+    </a>
 
     <!-- Footer -->
     <footer class="bg-slate-900 border-t border-green-500/20 py-12">
