--- a/pynerd.html
+++ b/pynerd.html
@@ -359,6 +359,36 @@
         </div>
     </section>
 
+    <!-- PyNerd Development Action -->
+    <section class="py-16 bg-gradient-to-r from-slate-800 to-slate-900 animate-on-scroll">
+        <div class="container mx-auto px-4 text-center">
+            <div class="max-w-4xl mx-auto">
+                <h2 class="text-3xl font-bold mb-6 gradient-text">Mais que um Curso, um Ecossistema Completo</h2>
+                <div class="grid md:grid-cols-2 gap-8 mt-12">
+                    <div class="glass p-6 rounded-xl border border-green-500/20 hover-glow">
+                        <div class="w-16 h-16 bg-green-500/20 rounded-full flex items-center justify-center mx-auto mb-4">
+                            <i class="fas fa-graduation-cap text-2xl text-green-400"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-3 text-green-400">PyNerd Academy</h3>
+                        <p class="text-gray-300 mb-4">Aprenda Python do zero ao avançado com projetos práticos e mentoria especializada.</p>
+                        <p class="text-green-400 font-semibold">Você está aqui! 🎯</p>
+                    </div>
+                    
+                    <div class="glass p-6 rounded-xl border border-cyan-500/20 hover-glow">
+                        <div class="w-16 h-16 bg-cyan-500/20 rounded-full flex items-center justify-center mx-auto mb-4">
+                            <i class="fas fa-code text-2xl text-cyan-400"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-3 text-cyan-400">PyNerd Development</h3>
+                        <p class="text-gray-300 mb-4">Precisa de um sistema personalizado? Nossa equipe desenvolve soluções sob medida.</p>
+                        <a href="development.html" class="inline-flex items-center text-cyan-400 hover:text-cyan-300 font-semibold">
+                            Conhecer Serviços <i class="fas fa-arrow-right ml-2"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- CTA Section -->
     <section id="inscricao" class="py-24 bg-slate-900 relative animate-on-scroll">
         <div class="absolute inset-0 bg-gradient-to-r from-green-500/5 to-cyan-500/5"></div>
