feat: Chansing the name of pynerd.html to index.html

--- a/development.html
+++ b/development.html
@@ -120,7 +120,7 @@
                 <a href="#tecnologias" class="hover:text-green-400 transition-colors">Tecnologias</a>
                 <a href="#contato" class="hover:text-green-400 transition-colors">Contato</a>
             </div>
-            <a href="pynerd.html" class="px-6 py-2 bg-gradient-to-r from-purple-500 to-blue-500 hover:from-purple-600 hover:to-blue-600 rounded-lg font-semibold transition-all transform hover:-translate-y-0.5">
+            <a href="index.html" class="px-6 py-2 bg-gradient-to-r from-purple-500 to-blue-500 hover:from-purple-600 hover:to-blue-600 rounded-lg font-semibold transition-all transform hover:-translate-y-0.5">
                 Academy
             </a>
         </div>
