--- a/index.html
+++ b/index.html
@@ -3,6 +3,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PyNerd | Ecossistema Completo de Tecnologia</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    fontFamily: {
+                        "mono": ["Monaco", "Menlo", "Ubuntu Mono", "monospace"],
+                        "sans": ["Inter", "system-ui", "sans-serif"]
+                    },
+                    animation: {
+                        "pulse-glow": "pulseGlow 2s infinite",
+                        "float": "float 3s ease-in-out infinite",
+                        "slide-up": "slideUp 0.6s ease-out",
+                        "bounce-soft": "bounceSoft 2s infinite"
+                    }
+                }
+            }
+        }
+    </script>
 </head>
 <body>
     
