--- a/index.html
+++ b/index.html
@@ -23,8 +23,45 @@
             }
         }
     </script>
+    <style>
+        @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Monaco&display=swap");
+
+        @keyframes pulseGlow {
+            0% { box-shadow: 0 0 0 0 rgba(74, 222, 128, 0.7); }
+            70% { box-shadow: 0 0 0 12px rgba(74, 222, 128, 0); }
+            100% { box-shadow: 0 0 0 0 rgba(74, 222, 128, 0); }
+        }
+
+        @keyframes float {
+            0%, 100% { transform: translateY(0px); }
+            50% { transform: translateY(-10px); }
+        }
+
+        @keyframes slideUp{
+            from { opacity: 0; transform: translateY(30px); }
+            to { opacity: 1; transform: translateY(-5px); }
+        }
+
+        @keyframes bounceSoft {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-5px); }
+        }
+
+        .whatsapp-float {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            z-index: 1000;
+            animation: bounce-soft 2s infinite;
+        }
+    </style>
 </head>
 <body>
-    
+    <!-- WhatsApp Float Button -->
+     <a href="https://wa.me/244928301450" target="_blank" class="whatsapp-float">
+        <div class="w-16 h-16 bg-green-500 hover:bg-green-600 rounded-full flex items-center justify-center shadow-lg hover:shadow-xl transition-all">
+            <i class="fab fa-whatsapp text-2xl text-white"></i>
+        </div>
+     </a>
 </body>
 </html>
