feat(navbar): Making structure of the navbar

--- a/index.html
+++ b/index.html
@@ -63,5 +63,27 @@
             <i class="fab fa-whatsapp text-2xl text-white"></i>
         </div>
      </a>
+
+     <!-- Navbar -->
+      <nav class="glass fixed w-full top-0 z-50 border-b border-green-500/20">
+        <div>
+            <i class="fas fa-code-branch"></i>
+            <span>PyNerd</span>
+        </div>
+        <div>
+            <a href="#">Sobre</a>
+            <a href="#">Ecossistema</a>
+            <a href="#">PySensei</a>
+            <a href="#">Contato</a>
+        </div>
+        <div>
+            <a href="academy.html">
+                Academy
+            </a>
+            <a href="development.html">
+                Development
+            </a>
+        </div>
+      </nav>
 </body>
 </html>
