feat(navbar): Styling the nav pages

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
                 <i class="fas fa-code-branch text-2xl text-green-400"></i>
                 <span class="font-mono font-bold text-xl gradient-text">PyNerd</span>
             </div>
-            <div>
-                <a href="#">Sobre</a>
-                <a href="#">Ecossistema</a>
-                <a href="#">PySensei</a>
-                <a href="#">Contato</a>
+            <div class="hidden md:flex space-x-6">
+                <a href="#" class="hover:text-green-400 transition-colors">Sobre</a>
+                <a href="#" class="hover:text-green-400 transition-colors">Ecossistema</a>
+                <a href="#" class="hover:text-green-400 transition-colors">PySensei</a>
+                <a href="#" class="hover:text-green-400 transition-colors">Contato</a>
             </div>
             <div>
                 <a href="academy.html">
