feat(navbar): Styling the Academy and Development link how botton

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                 <a href="#" class="hover:text-green-400 transition-colors">PySensei</a>
                 <a href="#" class="hover:text-green-400 transition-colors">Contato</a>
             </div>
-            <div>
-                <a href="academy.html">
+            <div class="flex items-center space-x-3">
+                <a href="academy.html" class="px-4 py-2 bg-gradient-to-r from-purple-500 to-blue-500 hover:from-purple-600 hover:to-blue-600 rounded-lg font-semibold transition-all text-sm">
                     Academy
                 </a>
-                <a href="development.html">
+                <a href="development.html" class="px-4 py-2 bg-gradient-to-r from-green-500 to-cyan-500 hover:from-green-600 hover:to-cyan-600 rounded-lg font-semibold transition-all text-sm">
                     Development
                 </a>
             </div>
