feat(hero section): Set elemento on hero section

--- a/index.html
+++ b/index.html
@@ -99,5 +99,46 @@
             </div>
         </div>
     </nav>
+
+    <!-- Hero Section -->
+     <section class="min-h-screen flex items-center pt-20 relative overflow-hidden">
+        <div class="absolute inset-0 bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900">
+
+            <div>
+                <div>
+                    <div>
+                        ECOSSISTEMA TECNOLÓGICO COMPLETO
+                    </div>
+
+                    <h1>
+                        <span>PyNerd</span>
+                        <span>Onde ideias viram realidade</span>
+                    </h1>
+
+                    <p>
+                        Da educação ao desenvolvimento profissional. Seu parceiro completo no universo da programação Python em Angola.
+                    </p>
+
+                    <div>
+                        <a href="academy.html">
+                            <div>
+                                <i class="fas fa-graduation-cap"></i>
+                            </div>
+                            <h3>PyNerd Academy</h3>
+                            <p>Aprenda Python do zero ao avançado</p>
+                        </a>
+
+                        <a href="development.html">
+                            <div>
+                                <i class="fas fa-code"></i>
+                            </div>
+                            <h3>PyNerd Development</h3>
+                            <p>Soluções sob medida para empresas</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+     </section>
 </body>
 </html>
