--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         }
 
         .gradient-text {
-            background: linear-gradient(to-right, #4ade80, #22d3ee);
+            background: linear-gradient(to right, #4ade80, #22d3ee);
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
@@ -65,6 +65,18 @@
             right: 30px;
             z-index: 1000;
             animation: bounce-soft 2s infinite;
+        }
+
+        .floating-element {
+            animation: float 4s ease-in-out infinite;
+        }
+
+        .floating-element:nth-child(2) {
+            animation-delay: -1.5s;
+        }
+
+        .floating-element:nth-child(3) {
+            animation-delay: -3s;
         }
     </style>
 </head>
@@ -104,39 +116,59 @@
      <section class="min-h-screen flex items-center pt-20 relative overflow-hidden">
         <div class="absolute inset-0 bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900">
 
-            <div>
-                <div>
-                    <div>
+            <!-- Floating Elements -->
+            <div class="absolute top-20 right-10 w-72 h-72 bg-green-500 rounded-full mix-blend-multiply filter blur-xl opacity-10 floating-element"></div>
+            <div class="absolute bottom-20 left-10 w-72 h-72 bg-cyan-500 rounded-full mix-blend-multiply filter blur-xl opacity-10 floating-element"></div>
+            <div class="absolute top-1/2 left-1/4 w-32 h-32 bg-purple-500 rounded-full mix-blend-multiply filter blur-xl opacity-10 floating-element"></div>
+
+            <div class="container mx-auto px-4 py-16 relative z-10">
+                <div class="text-center max-w-5xl mx-auto">
+                    <div class="inline-block bg-green-500/20 text-green-400 px-6 py-2 rounded-full text-sm font-mono mb-8 animate-pulse-glow">
                         ECOSSISTEMA TECNOLÓGICO COMPLETO
                     </div>
 
-                    <h1>
-                        <span>PyNerd</span>
-                        <span>Onde ideias viram realidade</span>
+                    <h1 class="text-6xl md:text-7xl font-bold leading-tight mb-8">
+                        <span class="gradient-text">PyNerd</span>
+                        <span class="text-4xl md:text-5xl text-gray-300">Onde ideias viram realidade</span>
                     </h1>
 
-                    <p>
+                    <p class="text-2xl text-gray-300 leading-relaxed mb-12 max-w-3xl mx-auto">
                         Da educação ao desenvolvimento profissional. Seu parceiro completo no universo da programação Python em Angola.
                     </p>
 
-                    <div>
-                        <a href="academy.html">
-                            <div>
-                                <i class="fas fa-graduation-cap"></i>
+                    <div class="grid md:grid-cols-2 gap-6 max-w-2xl mx-auto mb-12">
+                        <a href="academy.html" class="group bg-gradient-to-r from-purple-500/20 to-blue-500/20 border border-purple-500/30 p-6 rounded-xl hover:border-purple-400 transition-all transform hover:-translate-y-2">
+                            <div class="flex items-center justify-center mb-4">
+                                <i class="fas fa-graduation-cap text-3xl text-purple-400 group-hover:text-purple-300"></i>
                             </div>
-                            <h3>PyNerd Academy</h3>
-                            <p>Aprenda Python do zero ao avançado</p>
+                            <h3 class="text-xl font-bold text-purple-400 mb-2">PyNerd Academy</h3>
+                            <p class="text-gray-300 text-sm">Aprenda Python do zero ao avançado</p>
                         </a>
 
-                        <a href="development.html">
-                            <div>
-                                <i class="fas fa-code"></i>
+                        <a href="development.html" class="group bg-gradient-to-r from-green-500/20 to-cyan-500/20 border border-green-500/30 p-6 rounded-xl hover:border-green-400 transition-all transform hover:-translate-y-2">
+                            <div class="flex items-center justify-center mb-4">
+                                <i class="fas fa-code text-3xl text-green-400 group-hover:text-green-300"></i>
                             </div>
-                            <h3>PyNerd Development</h3>
-                            <p>Soluções sob medida para empresas</p>
+                            <h3 class="text-xl font-bold text-green-400 mb-2">PyNerd Development</h3>
+                            <p class="text-gray-300 text-sm">Soluções sob medida para empresas</p>
                         </a>
                     </div>
+
+                    <div class="flex items-center justify-center space-x-4 text-gray-400">
+                        <div class="flex -space-x-2">
+                            <div class="w-10 h-10 bg-gradient-to-r from-green-400 to-cyan-400 rounded-full border-2 border-slate-800"></div>
+                            <div class="w-10 h-10 bg-gradient-to-r from-purple-400 to-cyan-400 rounded-full border-2 border-slate-800"></div>
+                            <div class="w-10 h-10 bg-gradient-to-r from-yellow-400 to-cyan-400 rounded-full border-2 border-slate-800"></div>
+                        </div>
+                        <span><span class="text-green-400 font-semibold">+500 alunos</span> e <span class="text-cyan-400 font-semibold">+50 projetos</span> finalizados</span>
+                    </div>
                 </div>
+            </div>
+        </div>
+
+        <div class="absolute bottom-8 left-1/2 transform -translate-x-1/2 text-center">
+            <div class="animate-bounce text-green-400 text-2xl">
+                <i class="fas fa-chevron-down"></i>
             </div>
         </div>
      </section>
