feat(about-section): Create the about section

--- a/index.html
+++ b/index.html
@@ -173,6 +173,44 @@
         </div>
      </section>
 
+    <!-- About PyNerd -->
+     <section id="about" class="py-24 bg-slate-800">
+        <div class="container mx-auto px-4">
+            <div class="max-w-4xl mx-auto text-center">
+                <h2 class="text-4xl font-bold mb-6 gradient-text">O que é PyNerd?</h2>
+                <p class="text-xl text-gray-300 mb-12 leading-relaxed">
+                    PyNerd é um ecossistema tecnológico completo que conecta educação de qualidade com soluções profissionais de desenvolvimento. Nossa missão é democratizar o acesso ao conhecimento em programação Python e oferecer serviços de desenvolvimento de software de alta qualidade em Angola.
+                </p>
+
+                <div class="grid md:grid-cols-3 gap-8">
+                    <div class="text-center">
+                        <div>
+                            <i class="fas fa-rocket text-3xl text-green-400"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-3">Inovação</h3>
+                        <p class="text-gray-300">Tecnologias modernas e metodologias ágeis para resultados excepcionais</p>
+                    </div>
+
+                    <div class="text-center">
+                        <div>
+                            <i class="fas fa-heart text-3xl text-cyan-400"></i></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-3">Paixão</h3>
+                        <p class="text-gray-300">Cada projeto é desenvolvido com dedicação e atenção aos detalhes</p>
+                    </div>
+
+                    <div class="text-center">
+                        <div>
+                            <i class="fas fa-handshake text-3xl text-purple-400"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-3">Compromisso</h3>
+                        <p class="text-gray-300">Resultados garantidos e relacionamentos duradouros com nossos clientes</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+     </section>
+
      <script>
         // Counter animation
         function animateCounter(element, target, duration = 2000) {
