--- a/index.html
+++ b/index.html
@@ -223,6 +223,34 @@
      </section>
 
      <script>
+        // Scroll animations
+        const observeElements = document.querySelectorAll(".animate-on-scroll");
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add("visible");
+                }
+            });
+        }, { threshold: 0.1 });
+
+        observeElements.forEach(el => {
+            observer.observe(el);
+        });
+
+        // Smooth scrolling
+        document.querySelectorAll("a[href^='#']").forEach(anchor => {
+            anchor.addEventListener("click", function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute("href"));
+                if (target) {
+                    target.scrollIntoView({
+                        behavior: "smooth",
+                        block: start
+                    });
+                }
+            });
+        });
+
         // Counter animation
         function animateCounter(element, target, duration = 2000) {
             let start = 0;
