feat(ecosystem): Create the card for PyNerd Development

--- a/index.html
+++ b/index.html
@@ -275,6 +275,47 @@
                     </div>
                 </div>
 
+                <!-- Development Card -->
+                <div class="ecosystem-card bg-gradient-to-br from-green-500/10 to-cyan-500/10 p-8 rounded-2xl border border-green-500/30">
+                    <div class="text-center mb-8">
+                        <div class="w-24 h-24 bg-green-500/20 rounded-full flex items-center justify-center mx-auto mb-6">
+                            <i class="fas fa-code text-4xl text-green-400"></i>
+                        </div>
+                        <h3 class="text-3xl font-bold text-green-400 mb-4">PyNerd Development</h3>
+                        <p class="text-gray-300 text-lg mb-6">
+                            Soluções profissionais de software sob medida para empresas angolanas
+                        </p>
+                    </div>
+                    
+                    <div class="space-y-4 mb-8">
+                        <div class="flex items-center">
+                            <i class="fas fa-check-circle text-green-400 mr-3"></i>
+                            <span>Desenvolvimento Web & Mobile</span>
+                        </div>
+                        <div class="flex items-center">
+                            <i class="fas fa-check-circle text-green-400 mr-3"></i>
+                            <span>Automação & IA</span>
+                        </div>
+                        <div class="flex items-center">
+                            <i class="fas fa-check-circle text-green-400 mr-3"></i>
+                            <span>Sistemas ERP personalizados</span>
+                        </div>
+                        <div class="flex items-center">
+                            <i class="fas fa-check-circle text-green-400 mr-3"></i>
+                            <span>APIs & Integrações</span>
+                        </div>
+                    </div>
+                    
+                    <div class="text-center">
+                        <div class="mb-4">
+                            <span class="text-lg text-gray-400">A partir de</span>
+                            <span class="text-3xl font-bold text-green-400 block">KZ 80.000</span>
+                        </div>
+                        <a href="development.html" class="block px-8 py-4 bg-gradient-to-r from-green-500 to-cyan-500 hover:from-green-600 hover:to-cyan-600 rounded-lg font-bold transition-all transform hover:-translate-y-1">
+                            Solicitar Orçamento
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
