feat(static-section): Create the section for show static number

--- a/index.html
+++ b/index.html
@@ -386,6 +386,30 @@
         </div>
     </section>
 
+    <!-- Stats Section -->
+    <section class="py-16 bg-gradient-to-r from-slate-900 to-slate-800 animate-on-scroll">
+        <div class="container mx-auto px-4">
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-8 text-center">
+                <!-- <div>
+                    <div class="text-4xl font-bold text-purple-400 mb-2" data-count="500">0</div>
+                    <p class="text-gray-300">Alunos Formados</p>
+                </div> -->
+                <div>
+                    <div class="text-4xl font-bold text-green-400 mb-2" data-count="50">0</div>
+                    <p class="text-gray-300">Projetos Entregues</p>
+                </div>
+                <!-- <div>
+                    <div class="text-4xl font-bold text-cyan-400 mb-2" data-count="20">0</div>
+                    <p class="text-gray-300">Empresas Atendidas</p>
+                </div> -->
+                <div>
+                    <div class="text-4xl font-bold text-yellow-400 mb-2" data-count="5">0</div>
+                    <p class="text-gray-300">Anos de Experiência</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
      <script>
         // Scroll animations
         const observeElements = document.querySelectorAll(".animate-on-scroll");
