feat(footer): Create the footer

--- a/index.html
+++ b/index.html
@@ -470,6 +470,55 @@
         </div>
     </section>
 
+    <!-- Footer -->
+    <footer class="bg-slate-900 border-t border-green-500/20 py-12">
+        <div class="container mx-auto px-4">
+            <div class="grid md:grid-cols-4 gap-8 mb-8">
+                <div>
+                    <div class="flex items-center space-x-2 mb-4">
+                        <i class="fas fa-code-branch text-2xl text-green-400"></i>
+                        <span class="font-mono font-bold text-xl gradient-text">PyNerd</span>
+                    </div>
+                    <p class="text-gray-400 mb-4">Ecossistema completo de tecnologia e educação.</p>
+                    <div class="flex space-x-4">
+                        <a href="https://instagram.com/emicy963" class="text-gray-400 hover:text-green-400 transition-colors"><i class="fab fa-instagram"></i></a>
+                        <a href="https://linkedin.com/in/anderson-cafurica" class="text-gray-400 hover:text-green-400 transition-colors"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/emicy963" class="text-gray-400 hover:text-green-400 transition-colors"><i class="fab fa-github"></i></a>
+                        <a href="#" class="text-gray-400 hover:text-green-400 transition-colors"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+                <div>
+                    <h3 class="font-bold mb-4">Academy</h3>
+                    <div class="space-y-2">
+                        <a href="academy.html#sobre" class="block text-gray-400 hover:text-green-400 transition-colors">Sobre o Curso</a>
+                        <a href="academy.html#conteudo" class="block text-gray-400 hover:text-green-400 transition-colors">Conteúdo</a>
+                        <a href="academy.html#depoimentos" class="block text-gray-400 hover:text-green-400 transition-colors">Depoimentos</a>
+                        <a href="academy.html#inscricao" class="block text-gray-400 hover:text-green-400 transition-colors">Inscrições</a>
+                    </div>
+                </div>
+                <div>
+                    <h3 class="font-bold mb-4">Development</h3>
+                    <div class="space-y-2">
+                        <a href="development.html#servicos" class="block text-gray-400 hover:text-green-400 transition-colors">Serviços</a>
+                        <a href="development.html#tecnologias" class="block text-gray-400 hover:text-green-400 transition-colors">Tecnologias</a>
+                        <a href="development.html#contato" class="block text-gray-400 hover:text-green-400 transition-colors">Orçamento</a>
+                    </div>
+                </div>
+                <div>
+                    <h3 class="font-bold mb-4">Contato</h3>
+                    <div class="space-y-2 text-gray-400">
+                        <p><i class="fas fa-envelope text-green-400 mr-2"></i> contato@pynerd.com</p>
+                        <p><i class="fab fa-whatsapp text-green-400 mr-2"></i> +244 928 301 450</p>
+                        <p><i class="fas fa-map-marker-alt text-green-400 mr-2"></i> Luanda, Angola</p>
+                    </div>
+                </div>
+            </div>
+            <div class="border-t border-slate-700 pt-6 text-center text-gray-500">
+                <p>© 2025 PyNerd. Todos os direitos reservados. Criado por Anderson Cafurica (@Emicy963)</p>
+            </div>
+        </div>
+    </footer>
+
      <script>
         // Scroll animations
         const observeElements = document.querySelectorAll(".animate-on-scroll");
