--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
             50% { transform: translateY(-5px); }
         }
 
-        .gradient-text {
+        .gradient-text { 
             background: linear-gradient(to right, #4ade80, #22d3ee);
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
         }
-
-        .glass {
-            backdrop-filter: blur(10px);
-            background: rgba(15, 23, 42, 0.8);
+        
+        .glass { 
+            backdrop-filter: blur(10px); 
+            background: rgba(15, 23, 42, 0.8); 
         }
-
+        
         .animate-on-scroll {
             opacity: 0;
             transform: translateY(20px);
@@ -76,6 +76,30 @@
             right: 30px;
             z-index: 1000;
             animation: bounce-soft 2s infinite;
+        }
+
+        .ecosystem-card {
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            border: 2px solid transparent;
+        }
+
+        .ecosystem-card:hover {
+            border-color: rgba(74, 222, 128, 0.5);
+            transform: translateY(-8px) scale(1.02);
+            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.4);
+        }
+
+        .creator-profile {
+            background: linear-gradient(135deg, rgba(15, 23, 42, 0.9) 0%, rgba(30, 41, 59, 0.9) 100%);
+            border: 1px solid rgba(74, 222, 128, 0.3);
+        }
+
+        .social-link {
+            transition: all 0.3s ease;
+        }
+
+        .social-link:hover {
+            transform: translateY(-3px) scale(1.1);
         }
 
         .floating-element {
