--- a/academy.html
+++ b/academy.html
@@ -119,6 +119,9 @@
                 <a href="#depoimentos" class="hover:text-green-400 transition-colors">Depoimentos</a>
             </div>
             <div class="flex items-center space-x-4">
+                <a href="index.html" class="px-4 py-2 bg-slate-800 border border-green-500/30 rounded-lg font-semibold hover:bg-slate-700 transition-all text-sm">
+                    Início
+                </a>
                 <a href="development.html" class="px-4 py-2 bg-slate-800 border border-cyan-500/30 rounded-lg font-semibold hover:bg-slate-700 transition-all text-sm">
                     Development
                 </a>
@@ -171,10 +174,10 @@
                             <div class="w-3 h-3 bg-yellow-500 rounded-full"></div>
                             <div class="w-3 h-3 bg-green-500 rounded-full"></div>
                         </div>
-                        <div class="ml-4 text-sm text-gray-400 font-mono">py-nerd.py</div>
+                        <div class="ml-4 text-sm text-gray-400 font-mono">pynerd.py</div>
                     </div>
                     <div class="p-6 font-mono text-sm space-y-2">
-                        <div class="text-gray-500"># Bem-vindo ao Py-Nerd!</div>
+                        <div class="text-gray-500"># Bem-vindo ao PyNerd!</div>
                         <div><span class="text-purple-400">def</span> <span class="text-cyan-400">iniciar_jornada</span><span class="text-yellow-300">(</span><span class="text-orange-400">nome</span><span class="text-yellow-300">):</span></div>
                         <div class="ml-4"><span class="text-green-400">print</span><span class="text-yellow-300">(</span><span class="text-orange-300">f"Olá, {nome}!"</span><span class="text-yellow-300">)</span></div>
                         <div class="ml-4"><span class="text-purple-400">return</span> <span class="text-orange-300">"Sua jornada começou! 🚀"</span></div>
@@ -200,7 +203,7 @@
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div class="space-y-8">
                     <h2 class="text-4xl font-bold">
-                        <span class="gradient-text">Por que Python</span> com a Py-Nerd?
+                        <span class="gradient-text">Por que Python</span> com a PyNerd?
                     </h2>
                     <div class="space-y-6">
                         <div class="flex items-start space-x-4">
@@ -518,7 +521,7 @@
                 <div>
                     <div class="flex items-center space-x-2 mb-4">
                         <i class="fas fa-terminal text-2xl text-green-400"></i>
-                        <span class="font-mono font-bold text-xl gradient-text">Py-Nerd</span>
+                        <span class="font-mono font-bold text-xl gradient-text">PyNerd</span>
                     </div>
                     <p class="text-gray-400 mb-4">Transforme sua carreira através da programação Python.</p>
                     <div class="flex space-x-4">
@@ -544,7 +547,7 @@
                 </div>
             </div>
             <div class="border-t border-slate-700 pt-6 text-center text-gray-500">
-                <p>© 2025 Py-Nerd. Todos os direitos reservados.</p>
+                <p>© 2025 PyNerd. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
