--- a/development.html
+++ b/development.html
@@ -120,7 +120,10 @@
                 <a href="#tecnologias" class="hover:text-green-400 transition-colors">Tecnologias</a>
                 <a href="#contato" class="hover:text-green-400 transition-colors">Contato</a>
             </div>
-            <a href="index.html" class="px-6 py-2 bg-gradient-to-r from-purple-500 to-blue-500 hover:from-purple-600 hover:to-blue-600 rounded-lg font-semibold transition-all transform hover:-translate-y-0.5">
+            <a href="index.html" class="px-4 py-2 bg-slate-800 border border-green-500/30 rounded-lg font-semibold hover:bg-slate-700 transition-all text-sm">
+                Início
+            </a>
+            <a href="academy.html" class="px-4 py-2 bg-gradient-to-r from-purple-500 to-blue-500 hover:from-purple-600 hover:to-blue-600 rounded-lg font-semibold transition-all text-sm">
                 Academy
             </a>
         </div>
